fix: home content spacing

--- a/src/components/molecules/PromotionBanner.module.css
+++ b/src/components/molecules/PromotionBanner.module.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: center;
   min-height: 20rem;
-  margin-bottom: calc(var(--spacer) * 4);
+  margin-bottom: calc(var(--spacer) * 2);
   margin-top: calc(var(--spacer) * 2);
   background-size: cover;
   background-repeat: no-repeat;
