--- a/src/components/organisms/HomeContent.module.css
+++ b/src/components/organisms/HomeContent.module.css
@@ -1,6 +1,6 @@
 .container {
   margin: var(--spacer);
-  margin-top: calc(var(--spacer) * 5);
+  margin-top: calc(var(--spacer) * 2);
 }
 
 @media screen and (min-width: 54rem) {
